--- a/index.html
+++ b/index.html
@@ -11,9 +11,70 @@
     <title>Tapan Bavaliya - Portfolio</title>
   </head>
   <body>
-    <h1>My Portfolio</h1>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- ========== -->
+    <!-- navigation -->
+    <!-- ========== -->
+
+    <!-- Put your code here -->
+
+    <!-- ============= -->
+    <!-- // navigation -->
+    <!-- ============= -->
+
+
+
+
+    <!-- ============ -->
+    <!-- hero -->
+    <!-- ============ -->
+
+    <!-- Put your code here -->
+
+    <!-- =============== -->
+    <!-- // hero -->
+    <!-- =============== -->
+
+
+
+
+    <!-- ============= -->
+    <!-- about -->
+    <!-- ============= -->
+
+    <!-- Put your code here -->
+
+    <!-- ================ -->    
+    <!-- // about -->
+    <!-- ================ -->
+
+
+
+
+    <!-- ====== -->
+    <!-- skills -->
+    <!-- ====== -->
+
+    <!-- Put your code here -->
+    
+    <!-- ========= -->    
+    <!-- // skills -->
+    <!-- ========= -->
+
+
+
+
+
+    <!-- ====== -->
+    <!-- footer -->
+    <!-- ====== -->
+
+    <!-- Put your code here -->
+    
+    <!-- ========= -->    
+    <!-- // footer -->
+    <!-- ========= -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
