--- a/index.html
+++ b/index.html
@@ -14,33 +14,13 @@
 
     <!-- ========== -->
     <!-- navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">Tapan Bavaliya</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/#aboutme">About me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#skills">Skills</a>
-        </li>
-      </ul>
-      <span class="navbar-text">
-        <a href="mailto:tapan@improwised.com">tapan@improwised.com</a>
-      </span>
-    </div>
-  </div>
-</nav>
+
 
     <!-- ========== -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Tapan Bavaliya</a>
+    <a class="navbar-brand" href="#">Yash savaliya</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -54,7 +34,7 @@
         </li>
       </ul>
       <span class="navbar-text">
-        <a href="mailto:tapan@improwised.com">tapan@improwised.com</a>
+        <a href="mailto:ysavaliya215@rku.ac.in">ysavaliya215@rku.ac.in</a>
       </span>
     </div>
   </div>
@@ -72,6 +52,16 @@
     <!-- ============ -->
 
     <!-- Put your code here -->
+    <section class="container py-5">
+  <div class="row">
+    <div class="col">
+      <h5>Hello,</h5>
+      <h1>I am Tapan Bavaliya</h1>
+      <h3>Techlead</h3>
+      <button type="button" class="btn btn-primary mt-3">Contact Me</button>
+    </div>
+  </div>
+</section>
 
     <!-- =============== -->
     <!-- // hero -->
