Section: Hero Added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="row">
     <div class="col">
       <h5>Hello,</h5>
-      <h1>I am Tapan Bavaliya</h1>
+      <h1>I am Yash Savaliya</h1>
       <h3>Techlead</h3>
       <button type="button" class="btn btn-primary mt-3">Contact Me</button>
     </div>
