--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </span>
     </div>
   </div>
-
+</nav>
 
     <!-- ============= -->
     <!-- // navigation -->
@@ -154,6 +154,16 @@
     <!-- ====== -->
 
     <!-- Put your code here -->
+    <section class="bg-dark py-3 text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            Copyright ©2021 All rights reserved | Tapan Bavaliya  
+          </div>
+        </div>
+      </div>
+    </section>
+    
     
     <!-- ========= -->    
     <!-- // footer -->
