--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="col">
       <h5>Hello,</h5>
       <h1>I am Yash Savaliya</h1>
-      <h3>Techlead</h3>
+      <h3>Fresher</h3>
       <button type="button" class="btn btn-primary mt-3">Contact Me</button>
     </div>
   </div>
@@ -96,7 +96,7 @@
             <p>+91-8104017448</p>        
             
             <h3><strong>Reach out</strong></h3>
-            <p><a href="mailto:tapan@improwised.com">tapan@improwised.com</a></p>
+            <p><a href="mailto:ysavaliya215@rku.ac.in">ysavaliya215@rku.ac.in</a></p>
           </div>
         </div>
       </div>
